fixed Bus Error in HTML Template

--- a/documentation/autodoc/HTMLTemplate.html
+++ b/documentation/autodoc/HTMLTemplate.html
@@ -36,7 +36,7 @@ autodoc -force -destination docs/ -format html -project see/ -copyright "TheCodi
         
         td {padding:0.5ex 2em 0.5ex 0em}
     </style>
-    <meta name="Copyright" content="Copyright (c) [[copyrightYear]] [[copyrightOwner]]" />
+    <meta name="Copyright" content="Copyright (c) [[copyrightYear]] [[if copyrightOwner.length > 0]][[copyrightOwner]][[endif]]" />
     <title>[[mainTitle]]</title>
   </head>
 <body>
