--- a/subethaedit/English.lproj/SubEthaEdit Help/html/new.html
+++ b/subethaedit/English.lproj/SubEthaEdit Help/html/new.html
@@ -52,7 +52,7 @@
 								<td>
 									<p><FONT FACE="Lucida Grande,Arial, sans-serif"><B>New collaboration feature: Invitations</B></FONT><br>
 										<FONT FACE="Lucida Grande,Arial, sans-serif">Now you don't have to wait anymore for others to join your documents. If you need help, invite them by dragging them onto your document. It's as easy as 1-2-3.<br>
-										</FONT><FONT FACE="Lucida Grande,Arial, sans-serif"><a href="../pgs/776.html">Learn more</a></FONT></p>
+										</FONT></p>
 								</td>
 							</tr>
 						</table>
@@ -63,8 +63,8 @@
 								</td>
 								<td>
 									<p><font face="Lucida Grande,Arial, sans-serif"><b>Read only access for shared documents</b></font><br>
-										<FONT FACE="Lucida Grande,Arial, sans-serif">If you don't want people to change your text but give them a glimpse at it, set them to read only. Like that the can see your text and point out something, using selections, but can't change the actual text itself.<br>
-										</FONT><FONT FACE="Lucida Grande,Arial, sans-serif"><a href="../pgs/773.html">Learn more</a></FONT></p>
+										<FONT FACE="Lucida Grande,Arial, sans-serif">If you don't want people to change your text but give them a glimpse at it, set them to read only. Like that they can see your text, but can't change the it.<br>
+										</FONT></p>
 								</td>
 							</tr>
 						</table>
@@ -76,7 +76,7 @@
 								<td>
 									<p><font face="Lucida Grande,Arial, sans-serif"><b>300% more efficient network protocol<br>
 											</b>The new network protocol brings new features, faster data transfer and better scalability.<br>
-										</font><FONT FACE="Lucida Grande,Arial, sans-serif"><a href="../pgs/775.html">Learn more</a></FONT></p>
+										</font></p>
 								</td>
 							</tr>
 						</table>
