-fixed typos in Help

--- a/subethaedit/English.lproj/SubEthaEdit Help/html/new.html
+++ b/subethaedit/English.lproj/SubEthaEdit Help/html/new.html
@@ -20,7 +20,7 @@
 				</tr>
 				<tr valign="bottom">
 					<td width="3">&nbsp;</td>
-					<td width="48"><img src="../img/see-small.png" alt="iTunes Icon" height="48" width="48"></td>
+					<td width="48"><img src="../img/see-small.png" alt="SubEthaEdit Icon" height="48" width="48"></td>
 					<td width="8">&nbsp;</td>
 					<td valign="bottom"><font id="topic" size="4" face="Lucida Grande,Arial, sans-serif"><b>What's new in SubEthaEdit 2.0</b></font></td>
 				</tr>
