--- a/subethaedit/English.lproj/SubEthaEdit Help/html/overview.html
+++ b/subethaedit/English.lproj/SubEthaEdit Help/html/overview.html
@@ -2,7 +2,7 @@
 
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=iso-8859-1">
-		<title>Learn about iTunes</title>
+		<title>Overview</title>
 		<meta name="copyright" content="Copyright 2004 TheCodingMonkeys. All Rights Reserved.">
 		<meta name="keywords" content="overview, at a glance, tutorial, keyboard shortcuts, tips, learn, novice">
 		<meta name="description" content="Learn about SubEthaEdit.">
@@ -21,7 +21,7 @@
 				</tr>
 				<tr valign="bottom">
 					<td width="3">&nbsp;</td>
-					<td width="48"><img src="../img/see-small.png" alt="iTunes Icon" height="48" width="48"></td>
+					<td width="48"><img src="../img/see-small.png" alt="SubEthaEdit Icon" height="48" width="48"></td>
 					<td width="8">&nbsp;</td>
 					<td valign="bottom"><font id="topic" size="4" face="Lucida Grande,Arial, sans-serif"><b>Overview</b></font></td>
 				</tr>
