--- a/subethaedit/English.lproj/SubEthaEdit Help/html/problems.html
+++ b/subethaedit/English.lproj/SubEthaEdit Help/html/problems.html
@@ -17,7 +17,7 @@
 			<table width="100%" border="0" cellspacing="0" cellpadding="0">
 				<tr valign="bottom">
 					<td width="3">&nbsp;</td>
-					<td width="48"><img src="../img/see-small.png" alt="iTunes Icon" height="48" width="48"></td>
+					<td width="48"><img src="../img/see-small.png" alt="SubEthaEdit Icon" height="48" width="48"></td>
 					<td width="8">&nbsp;</td>
 					<td valign="bottom"><font id="topic" size="4" face="Lucida Grande,Arial, sans-serif"><b>Solving problems</b></font></td>
 				</tr>
