-fixed help incosistencies

--- a/subethaedit/English.lproj/SubEthaEdit Help/html/overview.html
+++ b/subethaedit/English.lproj/SubEthaEdit Help/html/overview.html
@@ -68,7 +68,7 @@
 <tr valign="top">
 <td>
 <p><font face="Lucida Grande,Arial, sans-serif"><b>Visible vs. Invisible.<br>
-</b>If you want others to be able to invite you, choose "Always visible" in the context menu below your name in the Rendezvous Browser. If you need some privacy, choose "Only visible when announcing documents".<br>
+</b>If you want others to be able to invite you, choose "Always Visible" in the context menu below your name in the Rendezvous Browser. If you need some privacy, choose "Visible if announcing documents".<br>
 </td>
 </tr>
 </table>
