--- a/subethaedit/English.lproj/SubEthaEdit Help/html/problems.html
+++ b/subethaedit/English.lproj/SubEthaEdit Help/html/problems.html
@@ -63,7 +63,7 @@
 								</td>
 								<td>
 									<p><font face="Lucida Grande,Arial, sans-serif"><b>I don't see any shared documents. What's wrong?</b></font><br>
-										<FONT FACE="Lucida Grande,Arial, sans-serif">Please check if you have enabled a firewall. If so, please allow SubEthaEdit to use port 6942 to 6951. In case you are using Mac OS X built-in firewall you have to perform these steps: Open "System Preferences → Sharing → Firewall". Click on "New" right to the box of allowed ports, choose "Other" in the drawer und enter "6942-6951" for the port number and "SubEthaEdit" for the description.<br>
+										<FONT FACE="Lucida Grande,Arial, sans-serif">Please check if you have enabled a firewall. If so, please allow SubEthaEdit to use port 6942 to 6951. In case you are using Mac OS X built-in firewall you have to perform these steps: Open "System Preferences &rarr; Sharing &rarr; Firewall". Click on "New" right to the box of allowed ports, choose "Other" in the drawer und enter "6942-6951" for the port number and "SubEthaEdit" for the description.<br>
 										</FONT></p>
 								</td>
 							</tr>
