- Fixed broken sentence in English Help - Fixed meta tags in English Help - Reindexed English Help

--- a/subethaedit/English.lproj/SubEthaEdit Help/html/shortcuts.html
+++ b/subethaedit/English.lproj/SubEthaEdit Help/html/shortcuts.html
@@ -5,7 +5,7 @@
 		<title>Keyboard Shortcuts</title>
 		<meta name="copyright" content="Copyright 2004 TheCodingMonkeys. All Rights Reserved.">
 		<meta name="keywords" content="overview, at a glance, tutorial, keyboard shortcuts, tips, learn, novice">
-		<meta name="description" content="Learn about SubEthaEdit.">
+		<meta name="description" content="Learn how to use your keyboard to do tasks more quickly.">
 		<link href="../css/task_tbl_style.css" rel="stylesheet" media="all">
 		<style type="text/css" media="all"><!--
 #mainbox { background-color: #fff; margin-top: 0px; margin-right: 26px; margin-left: 8px; position: absolute; top: 10px; left: 0px; visibility: visible; display: block }
