--- a/subethaedit/English.lproj/SubEthaEdit Help/html/tips.html
+++ b/subethaedit/English.lproj/SubEthaEdit Help/html/tips.html
@@ -2,10 +2,10 @@
 
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=iso-8859-1">
-		<title>Learn about SubEthaEdit</title>
+		<title>Tips</title>
 		<meta name="copyright" content="Copyright 2004 TheCodingMonkeys. All Rights Reserved.">
-		<meta name="keywords" content="overview, at a glance, tutorial, keyboard shortcuts, tips, learn, novice">
-		<meta name="description" content="Learn about SubEthaEdit.">
+		<meta name="keywords" content="shortcuts, tips">
+		<meta name="description" content="Learn tips and tricks that you can do to work more efficiently.">
 		<link href="../css/task_tbl_style.css" rel="stylesheet" media="all">
 		<style type="text/css" media="all"><!--
 #mainbox { background-color: #fff; margin-top: 0px; margin-right: 26px; margin-left: 8px; position: absolute; top: 10px; left: 0px; visibility: visible; display: block }
@@ -86,7 +86,7 @@
 									<p><img src="../img/favicon.png" alt="" height="16" width="16" align="absmiddle" border="0"></p>
 								</td>
 								<td>
-									<p><font face="Lucida Grande,Arial, sans-serif">To follow a user in collaboration mode drag them from the participant draw onto them document. This feature is great combined with the splitview.</FONT></p>
+									<p><font face="Lucida Grande,Arial, sans-serif">To follow a user in collaboration mode drag them from the participants drawer into the document. This feature is great combined with the splitview.</FONT></p>
 								</td>
 							</tr>
 						</table>
