- Added 'Purchase Now' button to License tab in Setup.nib - Fixed typo in English SubEthaEdit Help

--- a/subethaedit/English.lproj/SubEthaEdit Help/html/new.html
+++ b/subethaedit/English.lproj/SubEthaEdit Help/html/new.html
@@ -39,7 +39,7 @@
 								</td>
 								<td>
 									<p><font face="Lucida Grande,Arial, sans-serif"><b>Regular expression search and replace</b></font><br>
-										<FONT FACE="Lucida Grande,Arial, sans-serif">Find and replace with the power of regular expressions. Choose between  eight different regex flavor ranging from POSIX to Perl and Ruby. Use the all new Find All functions to show a list-of-found that also can be refreshed.<FONT FACE="Lucida Grande,Arial, sans-serif"><br>
+										<FONT FACE="Lucida Grande,Arial, sans-serif">Find and replace with the power of regular expressions. Choose between eight different regex flavor ranging from POSIX to Perl and Ruby. Use the all new Find All functions to show a list-of-found that also can be refreshed.<FONT FACE="Lucida Grande,Arial, sans-serif"><br>
 										</FONT><FONT FACE="Lucida Grande,Arial, sans-serif"><a href="http://www.regular-expression.info/">Learn more about regular expressions</a></FONT></p>
 								</td>
 							</tr>
@@ -63,7 +63,7 @@
 								</td>
 								<td>
 									<p><font face="Lucida Grande,Arial, sans-serif"><b>Read only access for shared documents</b></font><br>
-										<FONT FACE="Lucida Grande,Arial, sans-serif">If you don't want people to change your text but give them a glimpse at it, set them to read only. Like that they can see your text, but can't change the it.<br>
+										<FONT FACE="Lucida Grande,Arial, sans-serif">If you don't want people to change your text but give them a glimpse at it, set them to read only. Like that they can see your text, but can't change it.<br>
 										</FONT></p>
 								</td>
 							</tr>
