- Fixed German help page - Updated help indexes

--- a/German.lproj/SubEthaEdit Help/SubEthaEdit Help.html
+++ b/German.lproj/SubEthaEdit Help/SubEthaEdit Help.html
@@ -2,7 +2,7 @@
 
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=iso-8859-1">
-		<title>SubEthaEdit Help</title>
+		<title>SubEthaEdit Hilfe</title>
 		<meta name="copyright" content="Copyright 2004 TheCodingMonkeys. All Rights Reserved.">
 		<meta name="AppleTitle" content="SubEthaEdit Help">
 		<meta name="AppleIcon" content="SubEthaEditHelp/img/favicon.png">
