- Validating clear button in Internet browser when resolve failed - Finished first localization round of German Help (some keywords are still missing)

--- a/German.lproj/SubEthaEdit Help/html/new.html
+++ b/German.lproj/SubEthaEdit Help/html/new.html
@@ -51,7 +51,7 @@
 								</td>
 								<td>
 									<p><FONT FACE="Lucida Grande,Arial, sans-serif"><B>Einladen anderer Benutzern zum gemeinsamen Bearbeiten Ihrer Dokumente</B></FONT><br>
-										<FONT FACE="Lucida Grande,Arial, sans-serif">Sie brauchen nicht l&auml;nger darauf zu warten, dass andere Benutzer sich mit Ihrem Dokument &lt;&lt;verbinden&gt;&gt;. Wenn Sie Hilfe brauchen, laden Sie einfach andere Benutzer einfach, indem Sie sie aus einem der &lt;&lt;Browser&gt;&gt; in Ihr Dokument &lt;&lt;ziehen&gt;&gt;.<br>
+										<FONT FACE="Lucida Grande,Arial, sans-serif">Sie brauchen nicht l&auml;nger darauf zu warten, dass andere Benutzer sich mit Ihrem Dokument &lt;&lt;verbinden&gt;&gt;. Wenn Sie Hilfe brauchen, laden Sie einfach andere Benutzer einfach, indem Sie sie entweder aus dem Rendezvous- oder Internet-Fenster in Ihr Dokument ziehen.<br>
 										</FONT></p>
 								</td>
 							</tr>
