--- a/German.lproj/SubEthaEdit Help/html/overview.html
+++ b/German.lproj/SubEthaEdit Help/html/overview.html
@@ -40,9 +40,9 @@
 <table border="0" cellspacing="0" cellpadding="4">
 <tr valign="top">
 <td>
-<p><font face="Lucida Grande,Arial, sans-serif"><b>Dokumente &lt;&lt;ank&uuml;ndigen&gt;&gt;<br>
+<p><font face="Lucida Grande,Arial, sans-serif"><b>Dokumente &lt;&lt;ank&uuml;ndigen, bekanntmachen&gt;&gt;<br>
 </b>
-Damit andere Benutzer Ihre Dokumente sehen k&ouml;nnen m&uuml;ssen Sie diese &lt;&lt;ank&uuml;ndingen&gt;&gt;. Dazu klicken Sie einfach das &lt;&lt;Ank&uuml;ndigen&gt;&gt;-Symbol in der Symbolleiste des Dokuments oder dr&uuml;cken &#8679;&#8984;E. Nun sehen die anderen Benutzer Ihr Dokument in ihrem Rendezvous-&lt;&lt;Browser&gt;&gt; und k&ouml;nnen mit einem Doppelklick darauf &lt;&lt;teilnehmen&gt;&gt;.
+Damit andere Benutzer Ihre Dokumente sehen k&ouml;nnen m&uuml;ssen Sie diese &lt;&lt;ank&uuml;ndingen&gt;&gt;. Dazu klicken Sie einfach das &lt;&lt;Ank&uuml;ndigen&gt;&gt;-Symbol in der Symbolleiste des Dokuments oder dr&uuml;cken &#8679;&#8984;E. Nun sehen die anderen Benutzer Ihr Dokument in ihrem Rendezvous-Fenster und k&ouml;nnen mit einem Doppelklick darauf &lt;&lt;teilnehmen&gt;&gt;.
 </td>
 </tr>
 </table>
@@ -51,7 +51,7 @@ Damit andere Benutzer Ihre Dokumente sehen k&ouml;nnen m&uuml;ssen Sie diese &lt
 <tr valign="top">
 <td>
 <p><font face="Lucida Grande,Arial, sans-serif"><b>Benutzer einladen<br>
-</b>Andere Benutzer k&ouml;nnen Sie in Ihre Dokumente einladen indem Sie sie einfach aus dem Rendezvous oder Internet-&lt;&lt;Browser&gt;&gt; in Ihr Dokument &lt;&lt;ziehen&gt;&gt;.<br>
+</b>Andere Benutzer k&ouml;nnen Sie in Ihre Dokumente einladen indem Sie sie einfach aus dem Rendezvous oder Internet-Fenster in Ihr Dokument ziehen.<br>
 </td>
 </tr>
 </table>
@@ -60,7 +60,7 @@ Damit andere Benutzer Ihre Dokumente sehen k&ouml;nnen m&uuml;ssen Sie diese &lt
 <tr valign="top">
 <td>
 <p><font face="Lucida Grande,Arial, sans-serif"><b>An Dokumenten &lt;&lt;teilnehmen&gt;&gt;<br>
-</b>Wenn Sie an einem Dokument in Ihrem &lt;&lt;Subnetz&gt;&gt; &lt;&lt;teilnehmen&gt;&gt; wollen w&auml;hlen Sie dieses durch Doppelklicken in Ihrem Rendezvous-&lt;&lt;Browser&gt;&gt; (&#8984;K) aus. Um eine Verbindung &uuml;ber das Internet herzustellen, &ouml;ffnen Sie den Internet-&lt;&lt;Browser&gt;&gt; (&#8679;&#8984;K) und geben den Rechnernamen oder die IP-Adresse des Benutzers an, der das gew&uuml;nschte Dokument &lt;&lt;freigegeben&gt;&gt; hat.<br>
+</b>Wenn Sie an einem Dokument in Ihrem &lt;&lt;Subnetz&gt;&gt; &lt;&lt;teilnehmen&gt;&gt; wollen w&auml;hlen Sie dieses durch Doppelklicken in Ihrem Rendezvous-Fenster (&#8984;K) aus. Um eine Verbindung &uuml;ber das Internet herzustellen, &ouml;ffnen Sie das Internet-Fenster (&#8679;&#8984;K) und geben den Rechnernamen oder die IP-Adresse des Benutzers an, der das gew&uuml;nschte Dokument &lt;&lt;freigegeben&gt;&gt; hat.<br>
 </td>
 </tr>
 </table>
@@ -69,7 +69,7 @@ Damit andere Benutzer Ihre Dokumente sehen k&ouml;nnen m&uuml;ssen Sie diese &lt
 <tr valign="top">
 <td>
 <p><font face="Lucida Grande,Arial, sans-serif"><b>&lt;&lt;Sichtbar&gt;&gt; oder &lt;&lt;Unsichtbar&gt;&gt;?<br>
-</b>Wenn Sie es anderen erm&ouml;glichen wollen Sie einzuladen w&auml;hlen Sie &lt;&lt;&quot;Always Visible&quot;&gt;&gt; im Men&uuml; unterhalb Ihres Names im Rendezvous-&lt;&lt;Browser&gt;&gt;. F&uuml;r den Fall, dass Sie nicht gesehen werden wollen w&auml;hlen Sie &lt;&lt;&quot;Visible if announcing documents&quot;&gt;&gt;.<br>
+</b>Wenn Sie es anderen erm&ouml;glichen wollen Sie einzuladen w&auml;hlen Sie &lt;&lt;&quot;Always Visible&quot;&gt;&gt; im Men&uuml; unterhalb Ihres Names im Rendezvous-Fenster. F&uuml;r den Fall, dass Sie nicht gesehen werden wollen w&auml;hlen Sie &lt;&lt;&quot;Visible if announcing documents&quot;&gt;&gt;.<br>
 </td>
 </tr>
 </table>
