--- a/German.lproj/SubEthaEdit Help/html/shortcuts.html
+++ b/German.lproj/SubEthaEdit Help/html/shortcuts.html
@@ -37,7 +37,7 @@
 									<p><img src="../img/favicon.png" alt="" height="16" width="16" align="absmiddle" border="0"></p>
 								</td>
 								<td>
-									<p><font face="Lucida Grande,Arial, sans-serif"> Autocomplete is activated by pressing &#8997;&#9099; (alt-escape) or F5</FONT></p>
+									<p><font face="Lucida Grande,Arial, sans-serif">Dr&uuml;cken Sie &#8997;&#9099; (alt-escape) oder F5 zum Aktivieren der &lt;&lt;automatischen Vervollst&auml;ndigung&gt;&gt;.</FONT></p>
 								</td>
 							</tr>
 						</table>
@@ -48,7 +48,7 @@
 									<p><img src="../img/favicon.png" alt="" height="16" width="16" align="absmiddle" border="0"></p>
 								</td>
 								<td>
-									<p><font face="Lucida Grande,Arial, sans-serif">Hold options and select text to activate blockediting.</FONT></p>
+									<p><font face="Lucida Grande,Arial, sans-serif">Halten Sie die Wahltaste gedr&uuml;ckt w&auml;hrend Sie einen Text ausw&auml;hlen zum Aktivieren von Blockedit.</FONT></p>
 								</td>
 							</tr>
 						</table>
@@ -59,7 +59,7 @@
 									<p><img src="../img/favicon.png" alt="" height="16" width="16" align="absmiddle" border="0"></p>
 								</td>
 								<td>
-									<p><font face="Lucida Grande,Arial, sans-serif"> Press &#9099; (escape) to stop blockediting.</FONT></p>
+									<p><font face="Lucida Grande,Arial, sans-serif">Dr&uuml;cken Sie &#9099; (escape) zum Beenden von Blockedit.</FONT></p>
 								</td>
 							</tr>
 						</table>
@@ -69,18 +69,7 @@
 									<p><img src="../img/favicon.png" alt="" height="16" width="16" align="absmiddle" border="0"></p>
 								</td>
 								<td>
-									<p><font face="Lucida Grande,Arial, sans-serif"> Press &#8984;R to show a live HTML preview.</FONT></p>
-								</td>
-							</tr>
-						</table>
-
-						<table border="0" cellspacing="0" cellpadding="4">
-							<tr valign="top">
-								<td width="16">
-									<p><img src="../img/favicon.png" alt="" height="16" width="16" align="absmiddle" border="0"></p>
-								</td>
-								<td>
-									<p><font face="Lucida Grande,Arial, sans-serif"> Press &#8984;E to use a selection for find and press &#8997;&#8984;F to open a "Find All" window for this search.</FONT></p>
+									<p><font face="Lucida Grande,Arial, sans-serif">Dr&uuml;cken Sie &#8984;R zum Anzeigen der &lt;&lt;live&gt;&gt; HTML-Vorschau.</FONT></p>
 								</td>
 							</tr>
 						</table>
@@ -91,7 +80,18 @@
 									<p><img src="../img/favicon.png" alt="" height="16" width="16" align="absmiddle" border="0"></p>
 								</td>
 								<td>
-									<p><font face="Lucida Grande,Arial, sans-serif">Show invisible characters by pressing &#8679;&#8984;I</FONT></p>
+									<p><font face="Lucida Grande,Arial, sans-serif">Dr&uuml;cken Sie &#8984;E zum Benutzen der Auswahl als Suchtext und dr&uuml;cken Sie anschlie&szlig;end &#8997;&#8984;F &lt;&lt;to open a &quot;Find All&quot; window for this search&gt;&gt;.</FONT></p>
+								</td>
+							</tr>
+						</table>
+
+						<table border="0" cellspacing="0" cellpadding="4">
+							<tr valign="top">
+								<td width="16">
+									<p><img src="../img/favicon.png" alt="" height="16" width="16" align="absmiddle" border="0"></p>
+								</td>
+								<td>
+									<p><font face="Lucida Grande,Arial, sans-serif">Dr&uuml;cken Sie &#8679;&#8984;I zum Anzeigen der unsichtbaren Zeichen im Text.</FONT></p>
 								</td>
 							</tr>
 						</table>
