--- a/German.lproj/SubEthaEdit Help/html/tips.html
+++ b/German.lproj/SubEthaEdit Help/html/tips.html
@@ -37,7 +37,7 @@
 									<p><img src="../img/favicon.png" alt="" height="16" width="16" align="absmiddle" border="0"></p>
 								</td>
 								<td>
-									<p><font face="Lucida Grande,Arial, sans-serif">To call SubEthaEdit from Terminal add <b>alias see='open -a /Applications/SubEthaEdit.app'</b> to your .bashrc</FONT></p>
+									<p><font face="Lucida Grande,Arial, sans-serif">Um SubEthaEdit vom Terminal aus zu starten f&uuml;gen Sie einfach folgende Zeile zu Ihrer .bashrc hinzu: <b>alias see='open -a /Applications/SubEthaEdit.app'</b></FONT></p>
 								</td>
 							</tr>
 						</table>
@@ -50,7 +50,7 @@
 									<p><img src="../img/favicon.png" alt="" height="16" width="16" align="absmiddle" border="0"></p>
 								</td>
 								<td>
-									<p><font face="Lucida Grande,Arial, sans-serif">If you are running a SubEthaEdit Server you can add autosave by calling <b>osascript -e 'save documents of application "SubEthaEdit"'</b> as a cronjob.</FONT></p>
+									<p><font face="Lucida Grande,Arial, sans-serif">Wenn Sie SubEthaEdit als &quot;Server&quot; laufen lassen, k&ouml;nnen Sie die offenen Dokumente automatisch speichern indem Sie folgendes in einem Cron-Job ausf&uuml;hren: <b>osascript -e &apos;save documents of application &quot;SubEthaEdit&quot;&apos;</b></FONT></p>
 								</td>
 							</tr>
 						</table>
@@ -63,7 +63,7 @@
 									<p><img src="../img/favicon.png" alt="" height="16" width="16" align="absmiddle" border="0"></p>
 								</td>
 								<td>
-									<p><font face="Lucida Grande,Arial, sans-serif">You can link to SubEthaEdit documents by placing <b>&lt;a href="see://<em>hostname</em>/<em>document.txt</em>"&gt;</b> on your website.</FONT></p>
+									<p><font face="Lucida Grande,Arial, sans-serif">Sie k&ouml;nnen auf SubEthaEdit-Dokumente verweisen indem Sie einen Verweis der Form <b>&lt;a href="see://<em>hostname</em>/<em>document.txt</em>"&gt;</b> in Ihre Webseite einf&uuml;gen.</FONT></p>
 								</td>
 							</tr>
 						</table>
@@ -75,7 +75,7 @@
 									<p><img src="../img/favicon.png" alt="" height="16" width="16" align="absmiddle" border="0"></p>
 								</td>
 								<td>
-									<p><font face="Lucida Grande,Arial, sans-serif">If you are hosting a collaboration session and want to email the text to all users after having finished, select them in the participants drawer and control-click or use the action menu. Copy the text to the mail client and there you go!</FONT></p>
+									<p><font face="Lucida Grande,Arial, sans-serif">Wenn Sie den Text eines Dokuments allen daran beteiligten Benutzern per E-Mail schicken wollen, w&auml;hlen Sie diese in der Teilnehmerliste aus und &ouml;ffnen dann eine E-Mail indem Sie das Kontext-Men&uuml; oder das Kurzbefehl-Men&uuml; benutzen. Anschlie&szlig;end kopieren Sie den Text in die ge&ouml;ffnete E-Mail und verschicken diese.</FONT></p>
 								</td>
 							</tr>
 						</table>
@@ -86,7 +86,7 @@
 									<p><img src="../img/favicon.png" alt="" height="16" width="16" align="absmiddle" border="0"></p>
 								</td>
 								<td>
-									<p><font face="Lucida Grande,Arial, sans-serif">To follow a user in collaboration mode drag them from the participant draw onto them document. This feature is great combined with the splitview.</FONT></p>
+									<p><font face="Lucida Grande,Arial, sans-serif">Um die Aktionen eines Benutzers im Dokument zu beobachten ziehen Sie diesen aus der Teilnehmerliste ins Dokument. Kombiniert man diese Funktion mit einem aufgeteilten Fenster k&ouml;nnen Sie in einer Fensterh&auml;lfte einen Teilnehmer beobachten und in der anderen den Text bearbeiten oder gleich zwei Teilnehmer beobachten.</FONT></p>
 								</td>
 							</tr>
 						</table>
