--- a/German.lproj/SubEthaEdit Help/html/problems.html
+++ b/German.lproj/SubEthaEdit Help/html/problems.html
@@ -36,8 +36,8 @@
 									<p><img src="../img/favicon.png" alt="" height="16" width="16" align="absmiddle" border="0"></p>
 								</td>
 								<td>
-									<p><font face="Lucida Grande,Arial, sans-serif"><b>I'm the only Macintosh user in the subnet. Where can I test collaborative editing?</b></font><br>
-										<FONT FACE="Lucida Grande,Arial, sans-serif">Connect to the offical CodingMonkeys testing server by clicking <a href="see://0x2a.no-ip.org/">here</a>.<br>
+									<p><font face="Lucida Grande,Arial, sans-serif"><b> In bin der einzige Macintosh-Benutzer im &lt;&lt;Subnetz&gt;&gt;. Wo kann ich &lt;&lt;kollaboratives Editieren&gt;&gt; ausprobieren?</b></font><br>
+										<FONT FACE="Lucida Grande,Arial, sans-serif">Verbinden Sie sich mit dem offiziellen CodingMonkeys Test Server indem Sie <a href="see://0x2a.no-ip.org/">hier</a> klicken.<br>
 										</FONT></p>
 								</td>
 							</tr>
@@ -50,9 +50,7 @@
 								</td>
 								<td>
 									<p><font face="Lucida Grande,Arial, sans-serif"><b>Ist SubEthaEdit 2.0 kompatibel mit der vorangegangenen Version?</b></font><br>
-										<FONT FACE="Lucida Grande,Arial, sans-serif">Nein. 
-										
-								    Due to its much more evolved network protocol, SubEthaEdit 2.0 can't talk to 1.x clients. However, the new protocol is extensible and ensures future development.<br>
+										<FONT FACE="Lucida Grande,Arial, sans-serif">Nein. Aufgrund seines wesentlich weiter entwickelten &lt;&lt;Netzwerk-Protokolls&gt;&gt; kann sich SubEthaEdit 2.0 nicht mit vorangegangenen Programmversionen verst&auml;ndigen. Jedoch ist das neue Protokoll erweiterbar und bietet somit Raum f&uuml;r zuk&uuml;nftige Entwicklungen.<br>
 										</FONT></p>
 								</td>
 							</tr>
@@ -64,8 +62,8 @@
 									<p><img src="../img/favicon.png" alt="" height="16" width="16" align="absmiddle" border="0"></p>
 								</td>
 								<td>
-									<p><font face="Lucida Grande,Arial, sans-serif"><b>I don't see any shared documents. What's wrong?</b></font><br>
-										<FONT FACE="Lucida Grande,Arial, sans-serif">Please check if you have enabled a firewall. If so, please allow SubEthaEdit to use port 6942 to 6951. In case you are using Mac OS X built-in firewall you have to perform these steps: Open "System Preferences &rarr; Sharing &rarr; Firewall". Click on "New" right to the box of allowed ports, choose "Other" in the drawer und enter "6942-6951" for the port number and "SubEthaEdit" for the description.<br>
+									<p><font face="Lucida Grande,Arial, sans-serif"><b>Ich sehe keine &lt;&lt;freigegebenen&gt;&gt; Dokumente? Was l&auml;uft falsch?</b></font><br>
+										<FONT FACE="Lucida Grande,Arial, sans-serif">Falls Sie die in Mac OS X eingebaute Firewall aktiviert haben m&uuml;ssen Sie Ports 6942 bis 6951 &ouml;ffnen, um SubEthaEdit die Netzwerk-Kommunikation zu erlauben. Gehen Sie dazu wie folgt vor: &Ouml;ffnen Sie "Systemeinstellungen &rarr; Sharing &rarr; Firewall". Klicken Sie "Neu...", um eine Einstellung hinzuzuf&uuml;gen. W&auml;hlen Sie als Dienst "Andere" und geben Sie "6942-6951" als Bereich und "SubEthaEdit" als Beschreibung an.<br>
 										</FONT></p>
 								</td>
 							</tr>
@@ -78,8 +76,9 @@
 									<p><img src="../img/favicon.png" alt="" height="16" width="16" align="absmiddle" border="0"></p>
 								</td>
 								<td>
-									<p><font face="Lucida Grande,Arial, sans-serif"><b>I'm behind a router. How can I work with others over the internet, that also sit behind a router?</b></font><br>
-										<FONT FACE="Lucida Grande,Arial, sans-serif">One user has to enable port forwarding on his router. Port 6942 to 6951 should be forwared from the router to the computer. After that the other user should be able to establish a connection to him, which will be used to share documents in both directions. If you need to find out your dynamic IP, for example browse to <a href="http://whatismyip.com">http://whatismyip.com</a><br>
+									<p><font face="Lucida Grande,Arial, sans-serif"><b>Ich befinde mich hinter einem &lt;&lt;NAT-Router&gt;&gt;. Wie kann ich mmit anderen &uuml;ber das Internet zusammenarbeiten, die sich ebenfalls hinter einem &lt;&lt;NAT-Router&gt;&gt; befinden?
+									</b></font><br>
+										<FONT FACE="Lucida Grande,Arial, sans-serif">Ein Benutzer mu&szlig; an seinem &lt;&lt;NAT-Router&gt;&gt; &lt;&lt;Port-Weiterleitung&gt;&gt; aktivieren. Die Ports 6942 bis 6951 m&uuml;ssen vom &lt;&lt;NAT-Router&gt;&gt; zum &lt;&lt;Computer&gt;&gt; weitergeleitet werden. Nun sollte der andere Benutzer eine Verbindung aufbauen k&ouml;nnen, die nun beiden Seiten zum &lt;&lt;Freigeben&gt;&gt; von Dokumenten genutzt werden kann. Wenn Sie mit Ihrem Web-Browser <a href="http://whatismyip.com">http://whatismyip.com</a> laden, k&ouml;nnen Sie Ihre dynamisch zugewiesene IP-Adresse herausfinden.<br>
 										</FONT></p>
 								</td>
 							</tr>
