--- a/German.lproj/SubEthaEdit Help/html/new.html
+++ b/German.lproj/SubEthaEdit Help/html/new.html
@@ -39,7 +39,7 @@
 								</td>
 								<td>
 									<p><font face="Lucida Grande,Arial, sans-serif"><b>Suchen und Ersetzen mit Hilfe von regul&auml;ren Ausdr&uuml;cken</b></font><br>
-										<FONT FACE="Lucida Grande,Arial, sans-serif">Suchen und Ersetzen Sie mit Hilfe der M&auml;chtigkeit der regul&auml;ren Ausdr&uuml;cke. W&auml;hlen Sie aus acht verschiedenen Dialekten von regul&auml;ren Ausdr&uuml;cken, von POSIX &uuml;ber Perl zu Java. Die neue "Alle Suchen" Funktion zeigt alle Suchergebnisse in einer Liste an, die Sie jederzeit aktualisieren k&ouml;nnen.<FONT FACE="Lucida Grande,Arial, sans-serif"><br>
+										<FONT FACE="Lucida Grande,Arial, sans-serif">Suchen und Ersetzen Sie mit Hilfe der M&auml;chtigkeit der regul&auml;ren Ausdr&uuml;cke. W&auml;hlen Sie aus acht verschiedenen Dialekten von regul&auml;ren Ausdr&uuml;cken, von POSIX &uuml;ber Perl zu Java. Die neue "Alles Suchen" Funktion zeigt alle Suchergebnisse in einer Liste an, die Sie jederzeit aktualisieren k&ouml;nnen.<FONT FACE="Lucida Grande,Arial, sans-serif"><br>
 										</FONT><FONT FACE="Lucida Grande,Arial, sans-serif"><a href="http://www.regular-expression.info/">Bitte die Seite "Informationen &uuml;ber regul&auml;re Ausdr&uuml;cke" anzeigen.</a></FONT></p>
 								</td>
 							</tr>
