* Help Fixed 2.0 specifica and added new 2.1 features.

--- a/subethaedit/English.lproj/SubEthaEditHelp/html/shortcuts.html
+++ b/subethaedit/English.lproj/SubEthaEditHelp/html/shortcuts.html
@@ -48,7 +48,7 @@
 									<p><img src="../img/favicon.png" alt="" height="16" width="16" align="absmiddle" border="0"></p>
 								</td>
 								<td>
-									<p><font face="Lucida Grande,Arial, sans-serif">Hold options and select text to activate blockediting.</FONT></p>
+									<p><font face="Lucida Grande,Arial, sans-serif">Hold options and select text, or select text and press &#8679;&#8984;B, to activate blockediting.</FONT></p>
 								</td>
 							</tr>
 						</table>
