--- a/subethaedit/English.lproj/SubEthaEditHelp/html/tips.html
+++ b/subethaedit/English.lproj/SubEthaEditHelp/html/tips.html
@@ -37,7 +37,7 @@
 									<p><img src="../img/favicon.png" alt="" height="16" width="16" align="absmiddle" border="0"></p>
 								</td>
 								<td>
-									<p><font face="Lucida Grande,Arial, sans-serif">To call SubEthaEdit from Terminal add <b>alias see='open -a /Applications/SubEthaEdit.app'</b> to your .bashrc</FONT></p>
+									<p><font face="Lucida Grande,Arial, sans-serif">To call SubEthaEdit from Terminal use the new command line tool that is installed in /usr/bin/see.</FONT></p>
 								</td>
 							</tr>
 						</table>
