* Help -added "Copy with styles" tip -changed Tabulator feature text.

--- a/subethaedit/English.lproj/SubEthaEditHelp/html/new.html
+++ b/subethaedit/English.lproj/SubEthaEditHelp/html/new.html
@@ -135,9 +135,9 @@
 									<p><img src="../img/favicon.png" alt="" height="16" width="16" align="absmiddle" border="0"></p>
 								</td>
 								<td>
-									<p><font face="Lucida Grande,Arial, sans-serif"><b>Entab / Detab</b></font><br>
+									<p><font face="Lucida Grande,Arial, sans-serif"><b>Improved tabulator handling</b></font><br>
 									
-									You can now convert tabs to spaces and vice versa in the Format menu.
+									You can now convert tabs to spaces and vice versa in the Format menu. We also fixed some issues with tabs and various features, like e.g. block-edit and indentation.
 									
 									</p>
 								</td>
