--- a/subethaedit/English.lproj/SubEthaEditHelp/html/tips.html
+++ b/subethaedit/English.lproj/SubEthaEditHelp/html/tips.html
@@ -92,6 +92,18 @@
 						</table>
 
 
+						<table border="0" cellspacing="0" cellpadding="4">
+							<tr valign="top">
+								<td width="16">
+									<p><img src="../img/favicon.png" alt="" height="16" width="16" align="absmiddle" border="0"></p>
+								</td>
+								<td>
+									<p><font face="Lucida Grande,Arial, sans-serif">To preserve colors and style of copied text (e.g. to paste it into a RTF document), use the "Copy with styles" command in the Edit or context menu.</FONT></p>
+								</td>
+							</tr>
+						</table>
+
+
  
 
 
