* Localizations/*/SubEthaEditHelp/html/problems.html * English.lproj/SubEthaEditHelp/html/problems.html   Changed URL to see://codingmonkeys.de/.
* Localizations/*/SubEthaEditHelp/SubEthaEditHelp idx
* English.lproj/SubEthaEditHelp/SubEthaEditHelp idx
  Removed old indexes and generated new ones.

--- a/English.lproj/SubEthaEditHelp/html/problems.html
+++ b/English.lproj/SubEthaEditHelp/html/problems.html
@@ -37,7 +37,7 @@
 								</td>
 								<td>
 									<p><font face="Lucida Grande,Arial, sans-serif"><b>I'm the only Macintosh user in the subnet. Where can I test collaborative editing?</b></font><br>
-										<FONT FACE="Lucida Grande,Arial, sans-serif">Connect to the offical CodingMonkeys testing server by clicking <a href="see://0x2a.no-ip.org/">here</a>.<br>
+										<FONT FACE="Lucida Grande,Arial, sans-serif">Connect to the offical CodingMonkeys testing server by clicking <a href="see://codingmonkeys.de/">here</a>.<br>
 										</FONT></p>
 								</td>
 							</tr>
