--- a/Localizations/Catalan.lproj/SubEthaEditHelp/html/problems.html
+++ b/Localizations/Catalan.lproj/SubEthaEditHelp/html/problems.html
@@ -37,7 +37,7 @@
 								</td>
 								<td>
 									<p><font face="Lucida Grande,Arial, sans-serif"><b>S&oacute;c l'&uacute;nic usuari de Macintosh en aquesta subxarxa. Com puc provar l'edici&oacute; col&middot;laborativa?</b></font><br>
-										<FONT FACE="Lucida Grande,Arial, sans-serif">Connecteu-vos al servidor oficial dels CodingMonkeys tot fent clic <a href="see://0x2a.no-ip.org/">aqu&iacute;</a>.<br>
+										<FONT FACE="Lucida Grande,Arial, sans-serif">Connecteu-vos al servidor oficial dels CodingMonkeys tot fent clic <a href="see://codingmonkeys.de/">aqu&iacute;</a>.<br>
 										</FONT></p>
 								</td>
 							</tr>
