--- a/Localizations/Danish.lproj/SubEthaEditHelp/html/problems.html
+++ b/Localizations/Danish.lproj/SubEthaEditHelp/html/problems.html
@@ -37,7 +37,7 @@
 								</td>
 								<td>
 									<p><font face="Lucida Grande,Arial, sans-serif"><b>Jeg er den eneste Macintosh-bruger p&aring; et lokalnet. Hvor kan jeg teste samarbejdsredigering?</b></font><br>
-										<FONT FACE="Lucida Grande,Arial, sans-serif">Forbind til den officielle CodingMonkeys testserver ved at klikke <a href="see://0x2a.no-ip.org/">her</a>.<br>
+										<FONT FACE="Lucida Grande,Arial, sans-serif">Forbind til den officielle CodingMonkeys testserver ved at klikke <a href="see://codingmonkeys.de/">her</a>.<br>
 										</FONT></p>
 								</td>
 							</tr>
