--- a/Localizations/French.lproj/SubEthaEditHelp/html/problems.html
+++ b/Localizations/French.lproj/SubEthaEditHelp/html/problems.html
@@ -37,7 +37,7 @@
 								</td>
 								<td>
 									<p><font face="Lucida Grande,Arial, sans-serif"><b>J'utilise le seul Macintosh de mon sous-r&eacute;seau. O&ugrave; puis-je tester le mode collaboratif ?</b></font><br>
-										<FONT FACE="Lucida Grande,Arial, sans-serif">Connectez vous au serveur officiel CodingMonkeys en cliquant <a href="see://131.159.38.129/">ici</a>.<br>
+										<FONT FACE="Lucida Grande,Arial, sans-serif">Connectez vous au serveur officiel CodingMonkeys en cliquant <a href="see://codingmonkeys.de/">ici</a>.<br>
 										</FONT></p>
 								</td>
 							</tr>
