--- a/Localizations/German.lproj/SubEthaEditHelp/html/problems.html
+++ b/Localizations/German.lproj/SubEthaEditHelp/html/problems.html
@@ -37,7 +37,7 @@
 								</td>
 								<td>
 									<p><font face="Lucida Grande,Arial, sans-serif"><b> In bin der einzige Macintosh-Benutzer im Subnetz. Wo kann ich die kollaborative Textbearbeitung ausprobieren?</b></font><br>
-										<FONT FACE="Lucida Grande,Arial, sans-serif">Verbinden Sie sich mit dem offiziellen CodingMonkeys Test Server indem Sie <a href="see://0x2a.no-ip.org/">hier</a> klicken.<br>
+										<FONT FACE="Lucida Grande,Arial, sans-serif">Verbinden Sie sich mit dem offiziellen CodingMonkeys Test Server indem Sie <a href="see://codingmonkeys.de/">hier</a> klicken.<br>
 										</FONT></p>
 								</td>
 							</tr>
