--- a/Localizations/Japanese.lproj/SubEthaEditHelp/html/problems.html
+++ b/Localizations/Japanese.lproj/SubEthaEditHelp/html/problems.html
@@ -37,7 +37,7 @@
 								</td>
 								<td>
 									<p><font face="Lucida Grande,Arial, sans-serif"><b>同じサブネットに Macintosh ユーザが自分しかいません。コラボレーション編集をどこでテストすれば良いでしょう？</b></font><br>
-										<FONT FACE="Lucida Grande,Arial, sans-serif"><a href="see://0x2a.no-ip.org/">ここ</a> をクリックして CodingMonkeys のオフィシャルテストサーバに接続してください。<br>
+										<FONT FACE="Lucida Grande,Arial, sans-serif"><a href="see://codingmonkeys.de/">ここ</a> をクリックして CodingMonkeys のオフィシャルテストサーバに接続してください。<br>
 										</FONT></p>
 								</td>
 							</tr>
