--- a/Localizations/ko.lproj/SubEthaEditHelp/html/problems.html
+++ b/Localizations/ko.lproj/SubEthaEditHelp/html/problems.html
@@ -28,7 +28,7 @@
 			<table width="100%" border="0" cellspacing="0" cellpadding="3">
 				<tr>
 					<td>
-						<p><font face="Lucida Grande,Arial, sans-serif">SuvEthaEdit을 사용하는 동안 문제 해결을 위해 도움이 필요하다면 아래의 해결방법들을 확인하십시오.</font></p>
+						<p><font face="Lucida Grande,Arial, sans-serif">SubEthaEdit을 사용하는 동안 문제 해결을 위해 도움이 필요하다면 아래의 해결방법들을 확인하십시오.</font></p>
 						
 						<table border="0" cellspacing="0" cellpadding="4">
 							<tr valign="top">
@@ -37,7 +37,7 @@
 								</td>
 								<td>
 									<p><font face="Lucida Grande,Arial, sans-serif"><b>저는 제 서브네트 상의 유일한 매킨토시 사용자입니다. 어떻게 하면 협력 편집 작업을 시험해볼 수 있을까요?</b></font><br>
-										<FONT FACE="Lucida Grande,Arial, sans-serif">CodingMonkeys의 공식 테스팅 서버에 <a href="see://0x2a.no-ip.org/">연결</a>해보세요.<br>
+										<FONT FACE="Lucida Grande,Arial, sans-serif">CodingMonkeys의 공식 테스팅 서버에 <a href="see://codingmonkeys.de/">연결</a>해보세요.<br>
 										</FONT></p>
 								</td>
 							</tr>
