--- a/Localizations/ru.lproj/SubEthaEditHelp/html/problems.html
+++ b/Localizations/ru.lproj/SubEthaEditHelp/html/problems.html
@@ -37,7 +37,7 @@
 								</td>
 								<td>
 									<p><font face="Lucida Grande,Arial, sans-serif"><b>Я один в сети. Где я могу проверить совместную работу над документом?</b></font><br>
-										<FONT FACE="Lucida Grande,Arial, sans-serif">Подсоединитесь к официальному тестовому серверу CodingMonkeys по этой <a href="see://0x2a.no-ip.org/">ссылке</a>.<br>
+										<FONT FACE="Lucida Grande,Arial, sans-serif">Подсоединитесь к официальному тестовому серверу CodingMonkeys по этой <a href="see://codingmonkeys.de/">ссылке</a>.<br>
 										</FONT></p>
 								</td>
 							</tr>
