--- a/Localizations/zh_TW.lproj/SubEthaEditHelp/html/problems.html
+++ b/Localizations/zh_TW.lproj/SubEthaEditHelp/html/problems.html
@@ -37,7 +37,7 @@
 								</td>
 								<td>
 									<p><font face="Lucida Grande,Arial, sans-serif"><b>內部網路裡面只有我一個人用麥金塔，何處能讓我測試協同編輯？</b></font><br>
-										<FONT FACE="Lucida Grande,Arial, sans-serif">按<a href="see://0x2a.no-ip.org/">這裡</a>連到 CodingMonkeys 的官方測試伺服器。<br>
+										<FONT FACE="Lucida Grande,Arial, sans-serif">按<a href="see://codingmonkeys.de/">這裡</a>連到 CodingMonkeys 的官方測試伺服器。<br>
 										</FONT></p>
 								</td>
 							</tr>
